--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,100 +1,128 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8"/>
-<title>{{hash['name'].encode('utf8')}} - 纸上烤鱼,磁力链接,磁力搜索</title>
-<meta name="keywords" content=""/>
-<meta name="description" content="电影种子,磁力链接,迅雷链接,BT下载,尽在纸上烤鱼"/>
-<meta name="viewport" content="width=device-width"/>
-<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='default.css') }}"/>
-<link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}"/>
-</head>
-<body>
-<div id="wrapper">
-<div class="top-bar"><span class="first"><a href="/">种子搜索</a></span>
-<select autocomplete="off" onchange="changeLanguage(this.value)">
-<option value="KR">한국어</option>
-<option value="EN">English</option>
-<option value="JP">日本語</option>
-<option value="CN" selected>简体中文</option>
-<option value="HK">繁體中文</option>
-</select>
-</div>
-<div class="header-div">
-<form class="search-form"  action="{{url_for('search')}}" method="POST">
-<a href="/" ><img src="{{url_for('static',filename='logo_s.png')}}"  class="nav-logo"/></a>
+ <head> 
+  <meta http-equiv="Cache-Control" content="no-transform " />
+  <meta http-equiv="Cache-Control" content="no-siteapp" />
+  <meta name="applicable-device" content="pc,mobile">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
+  <title>{{hash.name}} -{{sitename}}-磁力搜索引擎</title> 
+  <meta name="keywords" content="{{hash.name}} , 磁力链接,种子搜索,BT种子,种子搜索神器,磁力搜索,BT搜索,磁力搜,磁力链,磁力链接搜索,BT种子搜索" /> 
+  <meta name="description" content="BT提供{{hash.name}}的磁力链接下载与迅雷链接下载。" /> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" /> 
+  <link rel="shortcut icon" href="{{url_for('static',filename='favicon.ico')}}"/>
+  <link rel="icon" href="{{url_for('static',filename='favicon.ico')}}"/>
+  <link type="text/css" rel="stylesheet" href="{{url_for('static',filename='muerbt.css')}}" /> 
+ </head> 
+ <body> 
+  <div class="wrapper">
+<div class="mt15"></div>
+  <div class="p-wrapper">
+    <div class="bobologo mb15"><a href=/"><img src="{{url_for('static',filename='muerbt.png')}}" alt="MuerBT磁力搜索 BT种子搜索利器 免费下载BT种子，超4000万条种子数据" /></a></div>
+    <div class="searchbox">
+      <form action="{{url_for('search')}}" name="search" id="searchFrom" method="post" onsubmit="return submitForm(this);" >
+        <div class="search">
 {{form.hidden_tag()}}
-{{form.search(id="search")}}
-{{form.submit(class="blue",id="btnSearch")}}
-</form>
-</div>
+          <div class="sbtn"><button value="磁力搜索" type="submit" >磁力搜索</button></div>
+<div class="wd" >
+{{form.search(id="search",placeholder="输入关键词搜索BT种子...",autocomplete = "on" ,autofocus="autofocus")}}
+        </div>
+      </form>
+    </div>
+     <div class="bt_title"><h2>{{hash['name'].encode('utf8')}}</h2></div>
+    <div class="tbox">
+      <div class="ssbox">
+        <div class="title"><h3>磁力链接/BT种子名称</h3></div>
+        <div class="content">
+<b>{{hash['name'].encode('utf8')}}</b>
+        </div>
+      </div>
+    </div>
 
-<div id="content">
-<div id="wall">
-<h2>{{hash['name'].encode('utf8')}}</h2>
-<div class="detail-panel detail-width">
-<table class="detail-table detail-width">
-<tbody>
-<tr class="detail-header-bg">
-<th>文件类型</th>
-<th>创建时间</th>
-<th>热度</th>
-<th>文件大小</th>
-</tr>
-<tr>
-<td>{{hash['category']}}</td>
-<td>{{hash['create_time']|todate}}</td>
-<td>{{hash['requests']}}</td>
-<td>
-{% if hash['length']>1073741824 %}
+    <div class="tbox">
+      <div class="ssbox">
+        <div class="title"><h3>磁力链接/BT种子简介</h3></div>
+        <div class="content">
+种子哈希：<b>{{hash['info_hash']}}</b><br />
+                文件大小：<b>{% if hash['length']>1073741824 %}
 {{(hash['length']/1073741824)|round(2)}}G
 {% else %}{{(hash['length']/1048576)|round(2)}}M
-{%endif%}
-</td>
-</tr>
-</tbody>
-</table>
-<div class="detail-panel detail-width">
-<div class="panel-header">磁力链接</div>
-<div class="panel-body">
-<a href="magnet:?xt=urn:btih:{{hash['info_hash'] | upper}}">magnet:?xt=urn:btih:{{hash['info_hash'] | upper}}</a>
-</div>
-</div>
-<div class="detail-panel detail-width">
-<div class="panel-header">迅雷下载</div>
-<div class="panel-body">
-<div id="xlurl">
-{% set magneturl=("magnet:?xt=urn:btih:"~hash['info_hash'] | upper) %}
-<a href="thunder://{{magneturl|tothunder}}">thunder://{{magneturl|tothunder}}</a>
-</div>
-</div>
-</div>
-<div class="detail-panel detail-width">
-<div class="panel-header">
-伪文件列表
-</div>
-<div class="panel-body">
-<ol>
-<li>{{hash.name}}&nbsp;<span class="cpill blue-pill">{% if hash['length']>1073741824 %}
-{{(hash['length']/1073741824)|round(2)}}G
-{% else %}{{(hash['length']/1048576)|round(2)}}M
-{%endif%}</span></li>
-</ol>
-</div>
-</div>
+{%endif%}</b> <br />
+                已经下载：<b>{{hash['requests']}}</b>次<br />
+                下载速度：<b>极快</b><br />
+                收录时间：<b>{{hash['create_time']|todate}}</b><br />
+                最近下载：<b>{{hash['last_seen']|todate}}</b>
+        </div>
+      </div>
+    </div>
 
+    <div class="tbox">
+      <div class="ssbox">
+        <div class="title"><h3>分享磁力链接/BT种子</h3></div>
+        <div class="content">
 
-<div class="detail-panel detail-width">
-<div class="panel-header">
-真文件列表
+<div class="addthis_inline_share_toolbox_fkn6"></div>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5801fd685f6cee91" async="async"></script>
+<span class="red">亲，你知道吗？下载的人越多速度越快，赶快把本页面分享给好友一起下载吧^_^</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="tbox">
+      <div class="ssbox">
+        <div class="title"><h3>磁力链接下载</h3></div>
+        <div class="content">
+<a href="magnet:?xt=urn:btih:{{hash['info_hash'] | upper}}" target="_blank" >magnet:?xt=urn:btih:{{hash['info_hash'] | upper}}</a><br/>  
+ <span class="red">复制链接到迅雷、QQ旋风进行下载，或者使用百度云离线下载。</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="tbox">
+      <div class="ssbox">
+        <div class="title"><h3>下载BT种子文件</h3></div>
+        <div class="content">
+<div class="down_btn">
+                <a href="magnet:?xt=urn:btih:{{hash['info_hash'] | upper}}" target="_blank" class="btn btn-primary" >磁力链接</a>
+                {% set magneturl=("magnet:?xt=urn:btih:"~hash['info_hash'] | upper) %}
+                <a href="thunder://{{magneturl|tothunder}}" target="_blank" class="btn btn-success" >迅雷下载</a>
+                <a href="magnet:?xt=urn:btih:{{hash['info_hash'] | upper}}" target="_blank" class="btn btn-info" >QQ旋风下载</a>
+                <a href="javascript:;" onClick="copyMagnetLink()" class="btn btn-warning">复制链接</a>
+                <input  id="MagnetLink" type="hidden" value="magnet:?xt=urn:btih:{{hash['info_hash'] | upper}}">
+                <a href="http://vod.xunlei.com/mini.html?url=magnet:?xt=urn:btih:{{hash['info_hash'] | upper}}" target="_blank" class="btn btn-danger">迅雷云播</a>
+                <a href="javascript:;" onClick="start('magnet:?xt=urn:btih:{{hash['info_hash'] | upper}}')" class="btn btn-success" >迅雷看看</a>
+                <a href="http://pan.baidu.com/" target="_blank" class="btn btn-primary" >百度网盘</a>
+                </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="tbox">
+      <div class="ssbox">
+        <div class="title"><h3>最近搜索</h3></div>
+        <div class="content">
+            <div class="like">
+              <span>
+{%for tag in tags%}
+              <a class="like-word" href="{{url_for('search_results',query=tag.tag,page=1)}}" target="_blank">{{tag.tag}}</a>      
+{% endfor %}
+              </span>
+        </div>
+      </div>
+    </div>
 </div>
-<div class="panel-body">
-<ul>
+    <div class="tbox">
+      <div class="ssbox">
+        <div class="title"><h3>文件列表</h3>
+            </div>
+            <div class="slist2">
+              <ul>
+
 {% if hash['file_list']|fromjson !=none  %}
 {%for f in hash['file_list']|fromjson%}
 {%if f['length']>1048576%}
-<li>{{f['path']}}&nbsp;<span class="cpill blue-pill">
+<li>{{f['path']}}&nbsp;<span class="lightColor">
 {%if f['length']>1073741824%}
 {{(f['length']/1073741824)|round(2)}}G
 {%elif f['length']>1048576%}
@@ -111,51 +139,36 @@
 {%endif%}</span></li>
 {% endif  %}
 </ul>
-</div>
-</div>
+        </div>
+      </div>
+    </div>
 
-
-<div class="detail-panel detail-width">
-<div class="panel-header">你可能喜欢</div>
-<div class="panel-body">
+    <div class="tbox">
+      <div class="ssbox">
+        <div class="title"><h3>你可能感兴趣</h3>
+            </div>
+            <div class="slist2">
+              <ul>
 {%for fenci in fenci_list%}
-<a href="{{url_for('search_results',query=fenci,page=1)}}">{{fenci.encode('utf8')}}</a>&nbsp;&nbsp;
-{%endfor%}
-</div>
-</div>
-<div class="detail-panel detail-width">
-<div class="panel-header">友情提示</div>
-<div class="panel-body">
-<p>{{hash.name}}</p>
-<p>本站已经屏蔽了99%的非法链接，若本链接侵犯你的权利，请联系下面的邮箱进行举报！ </p>
-<p>亲，你造吗？将网页分享给您的基友，下载的人越多速度越快哦！</p>
-</div>
-</div>
-<div class="detail-panel detail-width">
-<div class="panel-header">
-投诉异议
-</div>
-<div class="panel-body">
-<p>
-版权投诉/Complain Email：<a class="__cf_email__"  >hao123@hao123.com</a>
-</p>
-</div>
-</div>
-</div>
-<div class="push">
-</div>
-</div>
-</div>
-</div>
-<div class="footer">
-<span><a href="#">纸上烤鱼</a></span> | <span><a href="#">种子搜索</a></span> | <span><a href="#">磁力链接</a></span>
+<a href="{{url_for('search_results',query=fenci,page=1)}}" target="_blank">{{fenci.encode('utf8')}}</a>&nbsp;&nbsp;
+{% endfor %}
+</ul>
+            </div>
+          </div>
+        </div>
+
+    <div class="tbox">
+      <div class="ssbox">
+        <div class="title"><h3>版权提醒</h3></div>
+        <div class="content">
+<span class="grey f12">本站不存储任何资源内容，只收集BT种子元数据(例如文件名和文件大小)和磁力链接(BT种子标识符)，并提供查询服务，是一个完全合法的搜索引擎系统。 网站不提供种子下载服务，用户可以通过第三方链接或磁力链接获取到相关的种子资源。本站也不对BT种子真实性及合法性负责，请用户注意甄别！投诉邮箱：<a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="28455d4d5a4a5c065b4d5a5e414b4d684f45494144064b4745">hao123@hao123.com</a> </span>
+        </div>
+      </div>
+    </div>
+    </div>
 </div>
 
 
-<script charset="gbk" type="text/javascript" src="//www.baidu.com/js/opensug.js"></script>
-<script type="text/javascript">
-        var params = { "XOffset": 0, "YOffset": 0, "fontColor": "#444", "fontColorHI": "#000", "fontSize": "16px", "fontFamily": "arial", "borderColor": "gray", "bgcolorHI": "#ebebeb", "sugSubmit": false };
-        BaiduSuggestion.bind("search", params);
-    </script>
+{%include'footer.html'%}
 </body>
 </html>
