--- a/templates/list.html
+++ b/templates/list.html
@@ -1,135 +1,155 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8"/>
-<title>{{query}} - 搜索结果 - 纸上烤鱼磁力链接,磁力搜索</title>
-<meta name="keywords" content=""/>
-<meta name="description" content="电影种子,磁力链接,迅雷链接,BT下载,尽在纸上烤鱼"/>
-<meta name="viewport" content="width=device-width"/>
-<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='default.css') }}"/>
-<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
-<link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}"/>
-</head>
-<body>
-<div id="wrapper">
-<div class="top-bar"><span class="first"><a href="/">种子搜索</a></span>
-<select autocomplete="off" onchange="changeLanguage(this.value)">
-<option value="KR">한국어</option>
-<option value="EN">English</option>
-<option value="JP">日本語</option>
-<option value="CN" selected>简体中文</option>
-<option value="HK">繁體中文</option>
-</select>
-</div>
-<div class="header-div">
-<form class="search-form"  action="{{url_for('search')}}" method="POST">
-<a href="/" ><img src="{{url_for('static',filename='logo_s.png')}}"  class="nav-logo"/></a>
-{{form.hidden_tag()}}
-{{form.search(id="search")}}
-{{form.submit(class="blue",id="btnSearch")}}
-</form>
+ <head> 
+  <meta http-equiv="Cache-Control" content="no-transform " />
+  <meta http-equiv="Cache-Control" content="no-siteapp" />
+  <meta name="applicable-device" content="pc,mobile">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
+  <title>{{query}} -{{sitename}} -磁力搜索引擎</title> 
+  <meta name="keywords" content="{{query}},{{query}}下载,{{query}}种子,{{query}}BT种子 ,磁力链接,种子搜索,BT种子,种子搜索神器,磁力搜索,BT搜索,磁力搜,磁力链,磁力链接搜索,BT种子搜索" /> 
+  <meta name="description" content="{{query}}磁力链接,{{query}}BT种子迅雷下载,{{query}}百度云在线播放下载。{{query}}的热门磁力资源! 磁力链接搜索引擎,BT种子磁力链接的最佳种子搜索神器。" /> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" /> 
+  <link rel="shortcut icon" href="{{url_for('static', filename='favicon.ico')}}"/>
+  <link rel="icon" href="{{url_for('static', filename='favicon.ico')}}"/>
+  <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='muerbt.css')}}" /> 
+ </head> 
+ <body> 
+  <div class="wrapper">
+<div class="mt15"></div>
+  <div class="p-wrapper">
+    <div class="bobologo mb15"><a href="/"><img src="{{url_for('static', filename='muerbt.png')}}" alt="磁力搜索 BT种子搜索利器 免费下载BT种子，超4000万条种子数据" /></a></div>
+    <div class="searchbox">
+      <form action="{{url_for('search',category=0,query=query,page=1)}}" name="search" id="searchFrom" method="post" onsubmit="return submitForm(this);" >
+        <div class="search">
+    {{form.hidden_tag()}}
+          <div class="sbtn"><button value="磁力搜索" type="submit" >磁力搜索</button></div>
+<div class="wd" >
+{{form.search(id="search",placeholder="输入关键词搜索BT种子...",autocomplete = "on" ,autofocus="autofocus")}}   
+    </div>
+      </form>
+    </div>
 
-</div>
-<div id="sort-bar">
-<a href="#"><b>相关度</b></a>
-<a href="{{url_for('search_results_bylength',query=query,page=1)}}">文件大小</a>
-<a href="{{url_for('search_results_bycreate_time',query=query,page=1)}}">创建时间</a>
-<a href="{{url_for('search_results_byrequests',query=query,page=1)}}">热度</a>
-</div>
-<div id="content">
-<div id="wall">
-<div class="search-statu">
-<span>共找到 {{counts}} 条关于 {{query}} 的结果, 耗时 {{(taketime*1000)|int}} 毫秒</span>
 
-</div>
-<div class="adsense" style="position:relative"></div>
-<div class="col-md-8">
-{% for hash in hashs %}  
-<div class="search-item detail-width">
-<div class="item-title">
-<h3><a title="{{ hash.name }}" href="{{url_for('detail',info_hash=hash.info_hash)}}" target="_blank">{{ hash.name }}</a></h3>
-</div>
-<div class="item-list">
-<ul>
-<li>{{ hash.name }}<span class="lightColor">
-{% if hash['length']>1073741824 %}
+    <div class="tbox">
+      <div class="msg">
+        <span>为您找到约<span class="orange"> {{counts}} </span>个磁力链接/BT种子，耗时 {{(taketime*1000)|int}} 毫秒。</span><span>
+        </span>
+      </div>
+    </div>
+    <div class="tbox sort-box">
+      <div class="sortbar">
+        <span class="l-title">分类：</span>
+ {% if category==0 %}  <a href="{{url_for('search_results',query=query,category=0,order=order,page=1)}}" class="active">{%else%}<a href="{{url_for('search_results',query=query,category=0,order=order,page=1)}}">{%endif%} 全部</a>
+ {% if category==1 %}  <a href="{{url_for('search_results',query=query,category=1,order=order,page=1)}}" class="active">{%else%}<a href="{{url_for('search_results',query=query,category=1,order=order,page=1)}}">{%endif%} 影视</a>
+ {% if category==2 %}  <a href="{{url_for('search_results',query=query,category=2,order=order,page=1)}}" class="active">{%else%}<a href="{{url_for('search_results',query=query,category=2,order=order,page=1)}}">{%endif%} 音乐</a>
+ {% if category==3 %}  <a href="{{url_for('search_results',query=query,category=3,order=order,page=1)}}" class="active">{%else%}<a href="{{url_for('search_results',query=query,category=3,order=order,page=1)}}">{%endif%} 图像</a>
+ {% if category==4 %}  <a href="{{url_for('search_results',query=query,category=4,order=order,page=1)}}" class="active">{%else%}<a href="{{url_for('search_results',query=query,category=4,order=order,page=1)}}">{%endif%} 文档书籍</a>
+ {% if category==5 %}  <a href="{{url_for('search_results',query=query,category=5,order=order,page=1)}}" class="active">{%else%}<a href="{{url_for('search_results',query=query,category=5,order=order,page=1)}}">{%endif%} 压缩文件</a>
+ {% if category==6 %}  <a href="{{url_for('search_results',query=query,category=6,order=order,page=1)}}" class="active">{%else%}<a href="{{url_for('search_results',query=query,category=6,order=order,page=1)}}">{%endif%} 安装包</a>
+ {% if category==7 %}  <a href="{{url_for('search_results',query=query,category=7,order=order,page=1)}}" class="active">{%else%}<a href="{{url_for('search_results',query=query,category=7,order=order,page=1)}}">{%endif%} 其他</a>
+      </div>
+      <div class="sortbar">
+        <span class="l-title">排序：</span>
+ {% if order==0 %} <a href="{{url_for('search_results',query=query,category=category,order=0,page=1)}}" class="active">{%else%}<a href="{{url_for('search_results',query=query,category=category,order=0,page=1)}}">{%endif%} 相关程度</a>
+ {% if order==3 %} <a href="{{url_for('search_results',query=query,category=category,order=3,page=1)}}" class="active">{%else%}<a href="{{url_for('search_results',query=query,category=category,order=3,page=1)}}">{%endif%}热度</a>
+{% if order==1 %} <a href="{{url_for('search_results',query=query,category=category,order=1,page=1)}}" class="active">{%else%}<a href="{{url_for('search_results',query=query,category=category,order=1,page=1)}}">{%endif%}文件大小</a>
+{% if order==2 %} <a href="{{url_for('search_results',query=query,category=category,order=2,page=1)}}" class="active">{%else%}<a href="{{url_for('search_results',query=query,category=category,order=2,page=1)}}">{%endif%}添加时间</a>
+{% if order==4 %} <a href="{{url_for('search_results',query=query,category=category,order=4,page=1)}}" class="active">{%else%}<a href="{{url_for('search_results',query=query,category=category,order=4,page=1)}}">{%endif%}最近访问</a>
+      </div>
+    </div>
+    <div class="tbox">
+    {% for hash in hashs %}  
+            <div class="ssbox">
+            <div class="title">
+                <h3><span>[{{hash['category']}}]</span><a href="{{url_for('detail',info_hash=hash.info_hash)}}" target="_blank"> {{ hash.name }} </a></h3>
+            </div>
+
+            <div class="slist">
+                <ul>
+
+{% if hash['file_list']|fromjson !=none  %}
+{%for f in hash['file_list']|fromjson%}
+{%if f['length']>1048576%}
+<li>{{f['path']}}&nbsp;<span class="lightColor">
+{%if f['length']>1073741824%}
+{{(f['length']/1073741824)|round(2)}}G
+{%elif f['length']>1048576%}
+{{(f['length']/1048576)|round(2)}}M
+{%endif%}
+</span></li>
+{%else%}
+{%endif%}
+{% endfor %}
+{% else %}
+<li>{{hash.name}}&nbsp;<span class="lightColor">{% if hash['length']>1073741824 %}
 {{(hash['length']/1073741824)|round(2)}}G
 {% else %}{{(hash['length']/1048576)|round(2)}}M
-{%endif%}
-</span></li></ul>
-</div>
-<div class="item-bar">
-<span class="cpill fileType1">{{hash['category']}}</span>
-<span>创建时间：<b>{{ hash['create_time']|todate }}</b></span>
-<span>文件大小：
-{% if hash['length']>1073741824 %}
+{%endif%}</span></li>
+{% endif  %}
+
+                </ul>
+            </div>
+            <div class="sbar">
+                <span><a href="magnet:?xt=urn:btih:{{hash['info_hash'] | upper}}&dn={{ hash.name }}" target="_blank">[磁力链接]</a></span>
+                <span>添加时间:<b>{{ hash['create_time']|todate }}</b></span>
+                <span>大小:{% if hash['length']>1073741824 %}
 <b class="cpill yellow-pill">{{(hash['length']/1073741824)|round(2)}}G</b>
 {% else %}<b class="cpill blue-pill">{{(hash['length']/1048576)|round(2)}}M</b>
 {%endif%}</span>
-<span>热度：<b>{{hash['requests']}}</b></span>
-<span><img src="{{ url_for('static', filename='img/link.png') }}"  /><a href="magnet:?xt=urn:btih:{{hash['info_hash'] | upper}}" >磁力链接</a></span>
-</div>
-</div>
-{% endfor %} 
-<div class="bottom-pager detail-width">
+                <span>最近下载:<b>{{ hash['last_seen']|todate }}</b></span>
+                <span>热度:<b>{{hash['requests']}}</b></span>
+            </div>
+        </div>
+    {% endfor %}
+    </div>
+    <br>
+    <div class="addthis_inline_share_toolbox_fkn6_hr58_6og9_8vf5"></div>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5801fd685f6cee91" async="async"></script>
+    <span class="red f14">亲，你知道吗？下载的人越多速度越快，赶快把本页面分享给好友一起下载吧^_^</span>
+    <br>
+    <div class="pager">
+    <span>共{{pages}}页</span> 
 {% set prev_pages = page-4 if page>5 else 1 %}
 {% set next_pages = page+5 if page+5<=pages else pages%}
     {%if pages<10%}
 {%if page==1%}
-<span>上一页</span>
+<a href="#">上一页</a>
 {%else%}
-<a href="{{ url_for('search_results', query=query,page=page-1 )}}">上一页</a>
+<a href="{{ url_for('search_results', query=query,category=category,order=order,page=page-1 )}}">上一页</a>
 {%endif%}
 {%for i in range(1,pages+1)%}
-<a href="{{ url_for('search_results', query=query,page=i) }}">{{i}}</a>
+    <a href="{{ url_for('search_results', query=query,category=category,order=order,page=i )}}">{{i}}</a>
 {%endfor%}
 {%if page<pages%}
-<a href="{{ url_for('search_results', query=query,page=page+1) }}">下一页</a>
+<a href="{{ url_for('search_results', query=query,category=category,order=order,page=page+1) }}">下一页</a>
 {%else%}
-<span>下一页</span>
+<a href="#">下一页</a>
 {%endif%}    
     {%else%}
 {%if page==1%}
-<span>上一页</span>
+<a href="#">上一页</a>
 {%else%}
-<a href="{{ url_for('search_results', query=query,page=page-1 )}}">上一页</a>
+<a href="{{ url_for('search_results', query=query,category=category,order=order,page=page-1 )}}">上一页</a>
 {%endif%}
 {%for i in range(prev_pages,page)%}
-<a href="{{ url_for('search_results', query=query,page=i) }}">{{i}}</a>
+    <a href="{{ url_for('search_results', query=query,category=category,order=order,page=i )}}">{{i}}</a>
 {%endfor%}
-<a href="#">{{page}}</a>
+<span>{{page}}</span>
 {%for i in range(page+1,next_pages+1)%}
-<a href="{{ url_for('search_results', query=query,page=i) }}">{{i}}</a>
+    <a href="{{ url_for('search_results', query=query,category=category,order=order,page=i )}}">{{i}}</a>
 {%endfor%}
 {%if page<pages%}
-<a href="{{ url_for('search_results', query=query,page=page+1) }}">下一页</a>
+<a href="{{ url_for('search_results', query=query,category=category,order=order,page=page+1) }}">下一页</a>
 {%else%}
-<span>下一页</span>
+<a href="#">下一页</a>
 {%endif%}
     {%endif%}
+    </div>
+    </div>
 </div>
-</div>
-<div class="col-md-2">
-<div class="search-notice sidebar-width">电影磁力链接,电影bt种子下载,电影迅雷下载相关资源由用户搜索指令自动获取，结果来源于网络，本站不存储任何资料，亦不承担任何责任，请于24小时内删除！</div>
-<div id="latest-search" class="sidebar-width">
-<span class="latest-desc">大家对这些感兴趣：</span>
-{%for tag in tags%}
-<span><a href="{{url_for('search_results',query=tag.tag,page=1)}}">{{tag.tag}}</a></span>
-{%endfor%}
-</div>
-</div>
-</div>
-</div>
-<div class="push">
-</div>
-</div>
-<div class="footer">
-<span><a href="#">纸上烤鱼</a></span> | <span><a href="#">种子搜索</a></span> | <span><a href="#">磁力链接</a></span>
-</div>
-<script charset="gbk" type="text/javascript" src="http://www.baidu.com/js/opensug.js"></script>
-<script type="text/javascript">
-             var params = { "XOffset": 0, "YOffset": 0, "fontColor": "#444", "fontColorHI": "#000", "fontSize": "16px", "fontFamily": "arial", "borderColor": "gray", "bgcolorHI": "#ebebeb", "sugSubmit": false };BaiduSuggestion.bind("search", params);
-       </script>
+
+{%include'footer.html'%}
 </body>
 </html>
