--- a/templates/index.html
+++ b/templates/index.html
@@ -1,64 +1,53 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="baidu-site-verification" content="P1QzNDXk6x"/>
-<meta charset="utf-8"/>
-<title>纸上烤鱼 - 种子搜索网站,最快的磁力链接搜索引擎</title>
-<meta name="keywords" content=""/>
-<meta name="description" content="纸上烤鱼种子搜索神器,一个有兔子般速度的种子搜索网站,为您提供高效精准的磁力链接搜索服务!"/>
-<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='default.css') }}"/>
-<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-<link rel="apple-touch-icon" href="{{ url_for('static', filename='ciliss_apple.jpg') }}"/>
-
-</head>
-<body>
-<div id="wrapper">
-<div class="top-bar"><span class="first"><a href="/">种子搜索</a></span>
-<select autocomplete="off" onchange="changeLanguage(this.value)">
-<option value="KR">한국어</option>
-<option value="EN">English</option>
-<option value="JP">日本語</option>
-<option value="CN" selected>简体中文</option>
-<option value="HK">繁體中文</option>
-</select>
-</div>
-<div id="first-content">
-<div id="center-box-wrapper">
-<div id="center-box">
-<div id="center-logo">
-<a href="/"><img src="{{ url_for('static', filename='logo.png') }}" alt="纸上烤鱼"/></a>
-<p><h1>纸上烤鱼-最快的磁力链接搜索引擎</h1></p>
-</div>
-<div id="search-box">
-<form id="search-form" action="{{url_for('search')}}" method="POST">
+ <head> 
+  <meta http-equiv="Cache-Control" content="no-transform " />
+  <meta http-equiv="Cache-Control" content="no-siteapp" />
+  <meta name="applicable-device" content="pc,mobile">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
+  <title>纸上烤鱼 - 磁力链接,BT种子搜索,磁力搜索引擎</title> 
+  <meta name="keywords" content="磁力链接,种子搜索,BT种子,种子搜索神器,磁力搜索,BT搜索,磁力搜,磁力链,磁力链接搜索,BT种子搜索" /> 
+  <meta name="description" content="BT网磁力链接搜索引擎索引收录了最新最热门的BT种子磁力链接，专业提供种子搜索、BT搜索、磁力搜索功能，上亿级的数据量是您下载电影、音乐、游戏、小说、电子书、动漫等BT种子磁力链接的最佳种子搜索神器。" /> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" /> 
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico')}}"/>
+  <link rel="icon" href="{{ url_for('static', filename='favicon.ico')}}"/>
+  <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='muerbt.css')}}" /> 
+ </head> 
+ <body> 
+  <div class="wrapper">
+<div class="bkl"></div>
+  <div class="p-wrapper">
+    <div class="bobologo mb15"><a href="/"><img src="{{ url_for('static', filename='muerbt.png')}}" alt="磁力搜索 BT种子搜索利器 免费下载BT种子，超4000万条种子数据" /></a></div>
+    <div class="searchbox">
+      <form action="{{url_for('search',category=0,page=1)}}" name="search" id="searchFrom" method="POST"  >
+  <div class="search">
 {{form.hidden_tag()}}
-{{form.search(id="search")}}
-{{form.submit(class="blue",id="btnSearch")}}
-</form>
-<div class="info-box">
-<ul>
-{%for k in keywords%}
-<li><a href="{{url_for('search_results',query=k.keyword,page=1)}}">{{k.keyword}}</a></li>
-{%endfor%}
-</ul>
-<p style="color:#000000; margin-top:10px;">总收录{{total}}条数据</p>
+          <div class="sbtn"><button value="磁力搜索" type="submit" >磁力搜索</button></div>
+<div class="wd" >
+{{form.search(id="search",placeholder="输入关键词搜索BT种子...",autocomplete = "on" ,autofocus="autofocus")}}
 </div>
-</div>
-</div>
-</div>
-</div>
-<div class="push"></div>
-</div>
-<div class="footer">
-<span><a href="#">纸上烤鱼</a></span> | <span><a href="#">种子搜索</a></span> | <span><a href="#">磁力链接</a></span>
-</div>
-<script charset="gbk" type="text/javascript" src="http://www.baidu.com/js/opensug.js"></script>
-<script type="text/javascript">
-             var params = { "XOffset": 0, "YOffset": 0, "fontColor": "#444", "fontColorHI": "#000", "fontSize": "16px", "fontFamily": "arial", "borderColor": "gray", "bgcolorHI": "#ebebeb", "sugSubmit": false };BaiduSuggestion.bind("search", params);
-       </script>
+        </div>
+      </form>
+    </div>
+
+<div class="f16 mt15 mb15">无聊的时候，就来<b>{{sitename}}</b>找找最新电影、电视、音乐、游戏解解闷！ :-)</div>
+    <div class="addthis_inline_share_toolbox_fkn6"></div>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5801fd685f6cee91" async="async"></script><span class="red f14">亲，你知道吗？下载的人越多速度越快，赶快把本页面分享给好友一起下载吧^_^</span>
+    <div class="tbox"> 
+          <div class="ssbox"> 
+            <div class="title"> <h3><span class="f14">热门搜索</span></h3> </div> 
+            <div class="rms">
+            {%for k in keywords%}
+            <a href="{{url_for('search_results',query=k.keyword,category=0,order=0,page=1)}}" target="_blank">{{k.keyword}}</a>
+            {%endfor%}
+            </div> 
+          </div> 
+        </div>
+<span class="f14" ><strong><span style="color: #ff0000;">友情提示：同时按<span style="background-color: #ff6600; color: #ffffff;">Ctrl+D</span>可快速添加本站到收藏夹!</span></strong></span></div>
+  </div>
+
+{%include'footer.html'%}
+
 </body>
 </html>
-
