--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<div class="footer"><span>copyright © 2017 <a href="#" rel="nofollow">MuerBT.com</a> 版权所有</span>  | <a href="#" target="_blank">热门种子</a> | <a href="#" target="_blank">最新资源</a> | <a href="#" target="_blank">在线播放</a> | <a href="#" target="_blank">热门搜索</a>
+<div class="footer"><span>copyright © 2017 <a href="#" rel="nofollow">{{sitename}}</a> 版权所有</span>  | <a href="#" target="_blank">热门种子</a> | <a href="#" target="_blank">最新资源</a> | <a href="#" target="_blank">在线播放</a> | <a href="#" target="_blank">热门搜索</a>
    </div>
 <script src="{{ url_for('static', filename='xmp.js')}}" type="text/javascript"></script>
 <script src="{{ url_for('static', filename='muerbt.js')}}" type="text/javascript"></script>
